# tn5250-rta

./: .dockerignore  .env  .env.sh  .env.sh.template  .env.template  .gitignore  .mcpignore  .robocop  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENV_SETUP.md  HISTORY_CLEANUP_REQUIRED.md  README.md  RELEASE_NOTES.md  REQUIREMENTS_VERIFICATION.md  pyproject.toml  requirements.txt  run_suites.sh  variables.py
.devcontainer/: README.md  devcontainer.json  devcontainer.json.template  devcontainer.template.json  hosts.conf  hosts.conf.template  setup-hosts.sh
.envs/: .env.sh.template.dev400  .env.template.dev400
.github/: COPILOT_ASSISTANT.md
.github/instructions/: global.instructions.md  python.instructions.md  robot.instructions.md
docs/: ARCHITECTURE.md  PASSWORD_OBFUSCATION.md  PASSWORD_SECURITY.md  PROJECT_STATUS.md  ROBOT_BEST_PRACTICES.md  TN5250Library.html  TN5250Lirary.html  tests_overview.html
libraries/: TN5250Library.py
resources/: common.resource  common.robot
results/: log.html  output.xml  report.html
tests/: README.md  application.robot  database.robot  demonstrate_password_obfuscation.py  hmc_connection.robot  journal.robot  login.robot  logout.robot  network_config.robot  screen_data.robot  screen_search.robot  system_config.robot  unit_test_password_obfuscation.py
tests/common/: application.robot  database.robot  journal.robot  login.robot  logout.robot  network_config.robot  system_config.robot
